Attempt (once again) to fix sigedition packshot width on mobile

--- a/css/sparklite.css
+++ b/css/sparklite.css
@@ -6767,7 +6767,7 @@ p {
 }
 #sig-packshot {
   margin: 1vw 2vw 2vw 2vw;
-  width: 50%;
+  width: 80%;
   max-width: 800px;
   border-radius: 6px;
   border: 2px solid #1B1B21;
